# FastAPI-backend-template

./: .env.docker.example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .vercelignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties  vercel.json
.github/workflows/: sast-sonarcloud.yml
api/: __main__.py  app.py  config.py  vercel.py
api/database/: __init__.py
api/database/alembic/: env.py
api/database/models/: model_base.py  users.py
api/entrypoints/: __init__.py  auth.py  random_response.py  root_response.py  router.py  user.py
api/entrypoints/monitoring/: __init__.py  views.py
api/entrypoints/v1/: __init__.py  router.py
api/exceptions/: http_exceptions.py
api/schemas/: base_db_schema.py  user.py
api/services/: auth.py  random_number_service.py  root_response_service.py  user_service.py
src/: app.py  main.py  vercel.py
src/configs/: envs.py  loguru.py
src/database/: __init__.py
src/database/alembic/: env.py
src/database/models/: model_base.py  user_types.py  (+1 more)
src/entrypoints/: __init__.py  auth.py  random_response.py  root_response.py  router.py  user.py  user_types.py
src/exceptions/: http_exceptions.py
src/middlewares/: logger_middleware.py
src/schemas/: auth.py  base_db_schema.py  root_response.py  user.py  user_type.py
src/services/: auth.py  random_number_service.py  root_response_service.py  user_service.py  user_type_service.py
src/utils/: auth_util.py  enums.py  random_util.py
tests/: conftest.py
tests/unit/: test_vercel.py
(+18 files in other folders)
