[tool.poetry]
name = "fastapi-backend-template"
version = "2.0.3"
description = "A FastAPI backend template."
authors = ["ArielMAJ <ariel.maj@hotmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
loguru = "^0.7.3"
httpx = "^0.28.1"
fastapi-cache2 = "^0.2.2"
alembic = "^1.15.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
asyncpg = "^0.30.0"
fastapi-async-sqlalchemy = "^0.6.1"
psycopg = "^3.2.9"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
pydantic = {extras = ["email"], version = "^2.11.4"}


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.6.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
coverage = "^7.8.0"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"

[tool.coverage.run]
branch=true
source = ["src"]
omit = [
    "src/main.py",
    "src/config.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

